fix(helm): fix agent-factory helm chart configuration issues
- Add missing service configurations (agent_executor, efast, docset, ecoconfig, uniquery)
- Change agent_factory and agent_executor host to localhost for intra-pod communication
- Fix volumeMounts to use subPath for precise file mounting
- Comment out deprecated agent-memory service in supervisord.conf
- Update securityContext runAsUser/runAsGroup from 1000 to 1001
- Enable keep_legacy_app_path configuration
- Add Resume() method stub to AgentCall
- Bump version from 0.1.0 to 0.2.0

This fixes deployment issues including:
- Nil pointer dereference due to missing service configs
- Volume mount conflicts from directory-level mounting
- Inefficient pod-internal service communication

--- a/agent-backend/deploy/helm/agent-factory/templates/configmap-executor-v2.yaml
+++ b/agent-backend/deploy/helm/agent-factory/templates/configmap-executor-v2.yaml
@@ -102,10 +102,10 @@ data:
         host: "agent-app"
         port: "30777"
       agent_executor:
-        host: "agent-executor"
+        host: "localhost"
         port: "30778"
       agent_factory:
-        host: "agent-factory"
+        host: "localhost"
         port: "13020"
       agent_operator_integration:
         host: "agent-operator-integration"
