--- a/agent-backend/deploy/docker/supervisord.conf
+++ b/agent-backend/deploy/docker/supervisord.conf
@@ -43,15 +43,15 @@ stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 priority=2
 
-[program:agent-memory]
-command=/app/agent-memory/agent-memory
-directory=/app/agent-memory
-autostart=true
-autorestart=true
-startsecs=5
-startretries=3
-stdout_logfile=/dev/stdout
-stdout_logfile_maxbytes=0
-stderr_logfile=/dev/stderr
-stderr_logfile_maxbytes=0
-priority=3
+# [program:agent-memory]
+# command=/app/agent-memory/agent-memory
+# directory=/app/agent-memory
+# autostart=true
+# autorestart=true
+# startsecs=5
+# startretries=3
+# stdout_logfile=/dev/stdout
+# stdout_logfile_maxbytes=0
+# stderr_logfile=/dev/stderr
+# stderr_logfile_maxbytes=0
+# priority=3
