refactor(decision-agent): rename Helm Chart from agent-factory to agent-backend
- Rename Helm Chart directory: agent-factory -> agent-backend
- Update Chart name in Chart.yaml: agent-factory -> agent-backend
- Update Docker image repository: dip/agent-factory -> dip/agent-backend
- Update component metadata name and title to agent-backend
- Update Makefile to reference new chart directory
- Keep all Kubernetes resource names as agent-factory for deployment consistency

Technical details:
- Chart.yaml: name changed from agent-factory to agent-backend
- values.yaml: image.repository changed from dip/agent-factory to dip/agent-backend
- _componentMeta.json: name and title changed to agent-backend
- All template files keep resource names as agent-factory (fixed values)
- Makefile updated helm template and lint commands

Verification:
- Helm lint passed (0 errors)
- Helm template generated successfully
- All resource names render correctly as agent-factory

--- a/agent-backend/deploy/helm/agent-backend/templates/configmap.yaml
+++ b/agent-backend/deploy/helm/agent-backend/templates/configmap.yaml
@@ -101,5 +101,5 @@ data:
 
 kind: ConfigMap
 metadata:
-  name: {{ .Release.Name }}-yaml
+  name: agent-factory-yaml
   namespace: {{ .Values.namespace }}
