--- a/agent-backend/deploy/helm/agent-backend/templates/secret.yaml
+++ b/agent-backend/deploy/helm/agent-backend/templates/secret.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ .Release.Name }}-secret-yaml
-  namespace: {{ .Release.Namespace }}
+  name: agent-factory-secret-yaml
+  namespace: {{ .Values.namespace }}
 stringData:
   # 配置文件路径/sysvol/conf/secret/agent-factory-secret.yaml
   agent-factory-secret.yaml: |
