--- a/agent-backend/deploy/helm/agent-backend/values.yaml
+++ b/agent-backend/deploy/helm/agent-backend/values.yaml
@@ -16,7 +16,7 @@ securityContext:
 image:
   registry: acr.aishu.cn
   service:
-    repository: dip/agent-factory
+    repository: dip/agent-backend
     tag: data-581755
     pullPolicy: IfNotPresent
 
