--- a/agent-backend/deploy/helm/Makefile
+++ b/agent-backend/deploy/helm/Makefile
@@ -1,5 +1,5 @@
 test:
-	helm template agent-factory --name-template "agent-factory">./helm-template-gen.yaml
+	helm template agent-factory agent-backend>./helm-template-gen.yaml
 
 lint:
-	cd agent-factory && helm lint .
+	cd agent-backend && helm lint .
