--- a/agent-backend/deploy/helm/agent-backend/templates/dependant-configmap.yaml
+++ b/agent-backend/deploy/helm/agent-backend/templates/dependant-configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-    name: {{ .Values.moduleName }}-dependant-configmap
+    name: agent-factory-dependant-configmap
     namespace: {{ .Values.namespace }}
 data:
     mdlconfig.json: |
