--- a/agent-backend/deploy/helm/agent-backend/templates/service-memory.yaml
+++ b/agent-backend/deploy/helm/agent-backend/templates/service-memory.yaml
@@ -5,7 +5,7 @@ metadata:
   name: agent-memory
   namespace: {{ .Values.namespace }}
   labels:
-    app: {{ .Release.Name }}
+    app: agent-factory
     service: agent-memory
 spec:
   ports:
@@ -14,5 +14,5 @@ spec:
       port: {{ .Values.agentMemory.port }}
       targetPort: {{ .Values.agentMemory.port }}
   selector:
-    app: {{ .Release.Name }}
+    app: agent-factory
   type: ClusterIP
