--- a/agent-backend/deploy/helm/agent-backend/templates/service.yaml
+++ b/agent-backend/deploy/helm/agent-backend/templates/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Release.Name }}
+  name: agent-factory
   namespace: {{ .Values.namespace }}
   labels:
-    app: {{ .Release.Name }}
+    app: agent-factory
 spec:
   {{- if .Values.service.enableDualStack }}
   ipFamilies:
@@ -21,5 +21,5 @@ spec:
       nodePort: {{ .Values.service.port }}
       {{- end}}
   selector:
-    app: {{ .Release.Name }}
+    app: agent-factory
   type: {{ .Values.service.type }}
