--- a/agent-backend/agent-memory/pyproject.toml
+++ b/agent-backend/agent-memory/pyproject.toml
@@ -1,3 +1,43 @@
+[project]
+name = "agent-memory"
+version = "0.1.0"
+requires-python = ">=3.13"
+dependencies = [
+    "anthropic==0.18.1",
+    "boto3==1.34.29",
+    "fastapi==0.109.0",
+    "groq==0.4.2",
+    "httpx==0.25.2",
+    "litellm==1.30.7",
+    "numpy>=1.26",
+    "ollama==0.1.6",
+    "openai==1.14.2",
+    "opensearch-py==2.8.0",
+    "posthog==3.5.0",
+    "pydantic>=2.9.0",
+    "python-dotenv==1.0.1",
+    "pytz==2024.1",
+    "pyyaml==6.0.1",
+    "PyMySQL==1.1.1",
+    "pymysql",
+    "qdrant-client==1.8.0",
+    "redis==5.0.1",
+    "redisvl==0.7.0",
+    "requests==2.32.0",
+    "sqlalchemy==1.4.23",
+    "together==0.2.4",
+    "uvicorn==0.27.0",
+    "tomli>=2.0.0",
+]
+
+[project.optional-dependencies]
+dev = [
+    "pytest==8.0.2",
+    "pytest-asyncio==0.21.0",
+    "pytest-cov==4.1.0",
+    "mock==5.1.0",
+]
+
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 python_files = ["test_*.py"]
