feat(agent-executor): make TelemetrySDK optional dependency
- Add sdk_available.py module to detect TelemetrySDK availability at runtime
- Gracefully disable observability features when SDK is not installed
- Fix circular import issues by lazy importing Config in trace modules
- Update pyproject.toml to make TelemetrySDK optional (commented out)
- Switch to kweaver-dolphin 0.2.0 from test.pypi
- Update python-multipart version constraint to >=0.0.9
- Update Dockerfile to remove test.pypi installation steps
- Add .gitignore entries for observability-related files

--- a/agent-backend/agent-executor/.gitignore
+++ b/agent-backend/agent-executor/.gitignore
@@ -61,6 +61,7 @@ log/*
 .env
 WARP.md
 CLAUDE.md
+.kiro
 
 # =============================================================================
 # AI Assistant Files
