--- a/agent-backend/deploy/docker/Dockerfile
+++ b/agent-backend/deploy/docker/Dockerfile
@@ -52,9 +52,9 @@ RUN set -ex; \
     cd /build; \
     uv sync; \
     # Dolphin from test.pypi
-    uv pip install --index-url https://test.pypi.org/simple/ \
-        --extra-index-url https://pypi.tuna.tsinghua.edu.cn/simple/ \
-        --index-strategy unsafe-best-match kweaver-dolphin; \
+    # uv pip install --index-url https://test.pypi.org/simple/ \
+    #     --extra-index-url https://pypi.tuna.tsinghua.edu.cn/simple/ \
+    #     --index-strategy unsafe-best-match kweaver-dolphin; \
     uv run pyinstaller agent-executor.spec
 
 # ==================== 构建阶段：agent-memory (Python/PyInstaller) ====================
