chore(data-retrieval): update version and enhance .gitignore
- Bumped version from 0.1.3 to 0.2.1 in pyproject.toml, reflecting recent enhancements.
- Updated project description for clarity on the library's purpose.
- Enhanced .gitignore to exclude local skill directories, improving project cleanliness.

--- a/data-retrieval/pyproject.toml
+++ b/data-retrieval/pyproject.toml
@@ -3,11 +3,11 @@ requires = ["setuptools"]
 
 [project]
 name = "kweaver-data-retrieval"
-version = "0.1.3"
+version = "0.2.1"
 authors = [
   { name="Chen Xiao", email="xavier.chen@aishu.cn" },
 ]
-description = "A library for Kweaver data retrieval"
+description = "A library for KWeaver AI data retrieval"
 readme = "README.pypi.md"
 license = {text = "Apache-2.0"}
 requires-python = ">=3.10"
