--- a/agent-backend/agent-executor/pyproject.toml
+++ b/agent-backend/agent-executor/pyproject.toml
@@ -22,7 +22,7 @@ requires-python = ">=3.10"
     "pandas==2.2.1",
     "pycryptodome==3.20.0",
     "pydantic==2.12.2",
-    "python-multipart>=0.0.9",
+    "python-multipart==0.0.22",
     "pyyaml==6.0.1",
     "redis==4.6.0",
     "requests==2.31.0",
