``` feat: add log file configuration and dev mode options
- Add LogFile field to Project struct for configurable logging output
- Introduce multiple development mode flags in config:
  - disable_pms_check for permission checking bypass
  - disable_biz_domain_init for business domain initialization skip
  - disable_audit_init for audit log initialization skip
  - mock_mq_client for mocking MQ client in local development
  - mock_sandbox_platform for mocking sandbox platform
- Add sandbox platform HTTP access implementation with mock support
- Refactor agent service to inject sandbox platform dependencies
- Implement conditional initialization based on config flags
- Update MQ client to use mock implementation in dev mode
- Fix environment helper to set default service name

BREAKING CHANGE: Configuration now requires new fields for proper initialization
```

--- a/agent-backend/agent-factory/conf/agent-factory.yaml.example
+++ b/agent-backend/agent-factory/conf/agent-factory.yaml.example
@@ -2,6 +2,22 @@
 # 是否保留老的APP路径
 keep_legacy_app_path: false
 
+
+# 是否禁用权限检查（本地开发时建议设置为true）
+disable_pms_check: true
+
+# 是否禁用业务域初始化（本地开发时建议设置为true）
+disable_biz_domain_init: true
+
+# 是否禁用审计日志初始化（本地开发时建议设置为true）
+disable_audit_init: true
+
+# 是否使用Mock MQ客户端（本地开发时建议设置为true）
+mock_mq_client: true
+
+# 是否使用Mock Sandbox Platform（本地开发时建议设置为true）
+mock_sandbox_platform: true
+
 # 这个文件只有本地调试用，打包是打不进去的，
 db:
   user_name: anyshare
@@ -59,6 +75,7 @@ project:
   port: 30777
   language: "zh-CN"
   logger_level: info
+  log_file: "./agent-factory.log"
 
   rbac_host: kg-user-rbac
   rbac_port: 6900
@@ -145,7 +162,33 @@ uniquery:
     host: 192.168.232.11
     port: 13011
     protocol: http
-
+biz_domain:
+  public_svc:
+    host: 192.168.232.11
+    port: 13011
+    protocol: http
+  private_svc:
+    host: 192.168.232.11
+    port: 13011
+    protocol: http
+datahubcentral:
+  public_svc:
+    host: 192.168.232.11
+    port: 13011
+    protocol: http
+  private_svc:
+    host: 192.168.232.11
+    port: 13011
+    protocol: http
+authorization:
+  public_svc:
+    host: 192.168.232.11
+    port: 13011
+    protocol: http
+  private_svc:
+    host: 192.168.232.11
+    port: 13011
+    protocol: http
 # OpenTelemetry 配置
 opentelemetry:
   # 服务名称
