--- a/agent-backend/deploy/docker/Dockerfile
+++ b/agent-backend/deploy/docker/Dockerfile
@@ -52,9 +52,9 @@ RUN set -ex; \
     cd /build; \
     uv sync; \
     # Dolphin from test.pypi
-    uv pip install --index-url https://test.pypi.org/simple/ \
-        --extra-index-url https://pypi.tuna.tsinghua.edu.cn/simple/ \
-        --index-strategy unsafe-best-match kweaver-dolphin; \
+    # uv pip install --index-url https://test.pypi.org/simple/ \
+    #     --extra-index-url https://pypi.tuna.tsinghua.edu.cn/simple/ \
+    #     --index-strategy unsafe-best-match kweaver-dolphin; \
     uv run pyinstaller agent-executor.spec
 
 # ==================== 构建阶段：agent-memory (Python/PyInstaller) ====================
@@ -94,6 +94,9 @@ RUN groupadd -r -g $GID aishu && \
     mkdir -p /app/agent-factory /app/agent-executor /app/agent-memory /var/log/supervisor
 
 WORKDIR /app
+
+# 设置 mem0 数据目录，避免在 /home/aishu 创建目录的权限问题
+ENV MEM0_DIR=/app/agent-memory
 
 # 从构建阶段复制已构建的二进制文件
 COPY --from=builder-factory --chown=$UID:$GID /build/agent-factory /app/agent-factory/agent-factory
