feat(decision-agent): optimize HTTP request logging and service configuration
- Add single file writer for HTTP request logs with configurable max entries
- Enable Dolphin package installation in Docker build from test.pypi
- Add new service-app.yaml template for agent-app service configuration
- Update dependencies in pyproject.toml (switch to GitHub telemetry SDK)
- Fix formatting and indentation in pyproject.toml dependencies section
- Add agentApp port configuration (30777) and nodePort (31023) in values.yaml

--- a/agent-backend/deploy/docker/Dockerfile
+++ b/agent-backend/deploy/docker/Dockerfile
@@ -51,10 +51,10 @@ RUN set -ex; \
     ssh-keyscan -t rsa devops.aishu.cn >> /root/.ssh/known_hosts; \
     cd /build; \
     uv sync; \
-    # Dolphin from test.pypi
-    # uv pip install --index-url https://test.pypi.org/simple/ \
-    #     --extra-index-url https://pypi.tuna.tsinghua.edu.cn/simple/ \
-    #     --index-strategy unsafe-best-match kweaver-dolphin; \
+     Dolphin from test.pypi
+     uv pip install --index-url https://test.pypi.org/simple/ \
+         --extra-index-url https://pypi.tuna.tsinghua.edu.cn/simple/ \
+         --index-strategy unsafe-best-match kweaver-dolphin; \
     uv run pyinstaller agent-executor.spec
 
 # ==================== 构建阶段：agent-memory (Python/PyInstaller) ====================
