--- a/agent-backend/agent-executor/pyproject.toml
+++ b/agent-backend/agent-executor/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = "Agent executor is an executor for agents"
 readme = "README.md"
 requires-python = ">=3.10"
- dependencies = [
+dependencies = [
     "aiohttp==3.9.3",
     "apscheduler==3.11.0",
     "arrow==0.15.8",
@@ -30,18 +30,18 @@ requires-python = ">=3.10"
     "structlog==24.1.0",
     "tika==3.1.0",
     "uvicorn==0.38.0",
-      "mq-sdk@git+ssh://devops.aishu.cn:22/AISHUDevOps/One-Architecture/_git/proton-mq-python@1.7.4",
+    "mq-sdk@git+ssh://devops.aishu.cn:22/AISHUDevOps/One-Architecture/_git/proton-mq-python@1.7.4",
     #    "mq-sdk@git+https://github.com/kweaver-ai/proton-mq-sdk-py@release/1.9.0",
-      "telemetrysdk-python@git+ssh://devops.aishu.cn:22/AISHUDevOps/One-Architecture/_git/TelemetrySDK-Python@2.6.1",
-    #    "telemetrysdk-python@git+https://github.com/kweaver-ai/TelemetrySDK-Python@2.4.2",
+    #      "telemetrysdk-python@git+ssh://devops.aishu.cn:22/AISHUDevOps/One-Architecture/_git/TelemetrySDK-Python@2.6.1",
+    "telemetrysdk-python@git+https://github.com/kweaver-ai/TelemetrySDK-Python@2.4.2",
     #    "tlogging",
-        "kweaver-dolphin==0.2.0",
+    #        "kweaver-dolphin==0.2.0",
 ]
 
 
 [dependency-groups]
 
- dev = [
+dev = [
     "ruff>=0.14.1",
     "mypy>=1.0.0",
     "pyinstaller>=6.16.0",
